services/models/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-api-ingress
  namespace: models
  annotations:
    kubernetes.io/ingress.class: nginx
    # rewrite-target is used to remove the /api/v1/models prefix from the URL
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/v1/models/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: model-api-service
            port:
              number: 8000
